fix scroll on mobile navbar, fix #90

--- a/assets/styles/modules/navbar.less
+++ b/assets/styles/modules/navbar.less
@@ -236,3 +236,8 @@
         }
     }
 }
+
+#navbar.cbp-spmenu-open {
+    max-height: 100%;
+    overflow-y: scroll;
+}
